# algobattle

./: .flake8  .gitignore  404.html  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  README.md  algobattle.ps1  index.html  match.py  mkdocs.yml  objects.inv  parser.py  problem.py  pyproject.toml  run.py  setup.py  verifier.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  python-app.yml  release.yml
advanced/: index.html
advanced/battle_types/: index.html
advanced/config/: index.html
advanced/docker/: index.html
advanced/problems/: index.html
algobattle/: __init__.py  battle.py  battle_style.py  battle_wrapper.py  cli.py  config.ini  config.py  docker.py  docker_util.py  docker_wrapper.py  events.py  fight.py  fight_handler.py  match.py  matchups.py  observer.py  old_problem.py  parser.py  problem.py  program.py  sighandler.py  subject.py  team.py  types.py  ui.py  util.py  verifier.py
algobattle/battle_styles/: README.md  __init__.py  averaged.py  iterated.py
algobattle/battle_wrappers/: README.md  __init__.py  averaged.py  iterated.py
algobattle/config/: config.ini  config_delaytest.ini  config_short_build_timeout.ini  config_short_run_timeout.ini
algobattle/problems/: README.md
algobattle/problems/biclique/: __init__.py  parser.py  problem.py  verifier.py
algobattle/problems/c4subgraphiso/: README.md  __init__.py  parser.py  problem.py  verifier.py
algobattle/problems/clusterediting/: __init__.py  parser.py  problem.py  verifier.py
algobattle/problems/delaytest/: README.md  (+4 more)
algobattle/templates/: __init__.py  problem.py.jinja
api/: index.html
api/battle/: index.html
api/problem/: index.html
api/util/: index.html
css/: custom.css
docs/: api.rst  conf.py  guide.rst  index.md  index.rst  teaching_concept.md
docs/advanced/: battle_types.md  config.md  docker.md  index.md  problems.md
docs/api/: battle.md  battle.rst  docker_util.rst  index.md  match.md  match.rst  problem.md  problem.rst  team.rst  util.md  util.rst
docs/css/: termynal.css
docs/guide/: cli.rst  instructor.rst  student.rst
docs/instructor/: battles.md  index.md  teaching_english.md  teaching_german.md
docs/js/: custom.js  termynal.js
docs/overview/: index.md
docs/problems/: 2dkp.md  basic_flow.md  characteristics.md  index.md  io.md  problem_parts.md
docs/src/: algobattle.toml  config.toml  interface_match.txt  match_cli.txt  pairsum_solution.json  pairsum_solution2.json
docs/src/pairsum_solver/: Cargo.toml  Dockerfile  main.rs
docs/teaching_concept/: english.md  german.md
docs/tutorial/: battle_types.md  config.md  getting_started.md  index.md  installation.md  match.md  overview.md  programs.md  summary.md
instructor/: index.html
instructor/teaching_english/: index.html
instructor/teaching_german/: index.html
problems/: README.md
problems/biclique/: README.md  parser.py  problem.py  verifier.py
problems/c4subgraphiso/: README.md  parser.py  problem.py  verifier.py
problems/clusterediting/: README.md  parser.py  verifier.py
problems/delaytest/: parser.py  problem.py  verifier.py
problems/domset/: __init__.py  parser.py  problem.py  verifier.py
problems/dsapprox/: README.md  __init__.py  problem.py  verifier.py
problems/hikers/: README.md  problem.py  verifier.py
problems/oscm3/: README.md  parser.py  verifier.py
problems/pairsum/: __init__.py  parser.py  problem.py  verifier.py
problems/pathpacking/: parser.py  verifier.py
problems/scheduling/: README.md  parser.py  problem.py  verifier.py
scripts/: algobattle  battle  battle.orig
search/: search_index.json
src/: interface_build.txt  pairsum_instance.json
src/problem/: instance.py  solution.py
tests/: README.md  test_battle_wrappers.py  test_battles.py  test_docker.py  test_everything.py  test_fight_handler.py  test_match.py  test_problem_biclique.py  test_problem_c4subgprahiso.py  test_problem_clusterediting.py  test_problem_domset.py  test_problem_hikers.py  test_problem_oscm3.py  test_problem_pairsum.py  test_problem_pathpacking.py  test_problem_scheduling.py  test_problems.py  test_types.py  test_util.py
tests/configs/: teams.toml  teams_incorrect.toml  test.toml
tests/testsproblem/: README.md  __init__.py  problem.py  verifier.py
tutorial/: index.html
tutorial/getting_started/: index.html
tutorial/installation/: index.html
tutorial/match/: index.html
tutorial/programs/: index.html
tutorial/summary/: index.html
(+186 files in other folders)
