[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "algobattle-base"
version = "4.0.0rc3"
description = "The Algobattle lab course package."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Imogen Hergeth"}, {name = "Jan Dreier"}, {name = "Henri Lotze"}]
urls = {github = "https://github.com/Benezivas/algobattle"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "docker>=6.1.2",
    "pydantic>=2.0.3",
    "anyio>=3.6.2",
    "typer[all]>=0.9.0",
    "typing-extensions>=4.7.1",
    "tomlkit>=0.12.1",
    "jinja2>=3.1.2",
]
[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-docstrings",
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocstrings[python]",
    "mdx_include",
]

[project.scripts]
algobattle = "algobattle.cli:app"

[tool.pyright]
diagnosticMode = "workspace"

[tool.black]
line-length = 120
