[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "algobattle-base"
version = "4.3.0"
description = "The Algobattle lab course package."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Imogen Hergeth"}, {name = "Jan Dreier"}, {name = "Henri Lotze"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "docker>=7.0.0",
    "pydantic>=2.5.3",
    "anyio>=4.2.0",
    "typer[all]>=0.9.0",
    "typing-extensions>=4.9.0",
    "tomlkit>=0.12.3",
    "jinja2>=3.1.2",
]

[project.urls]
Homepage = "https://algobattle.org"
Documentation = "https://algobattle.org/docs"
Repository = "https://github.com/Benezivas/algobattle"

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "pymdown-extensions>=10.7",
    "mkdocstrings[python]>=0.24.0",
    "mdx-include>=1.4.2",
]

[project.scripts]
algobattle = "algobattle.cli:app"

[tool.pyright]
diagnosticMode = "workspace"

[tool.black]
line-length = 120
